kubernetes/Manifest.yaml
# 7. Bank App Service
apiVersion: v1
kind: Service
metadata:
  name: wetaskeraws-service
  namespace: webapps
spec:
  type: ClusterIP
  selector:
    app: wetaskeraws
  ports:
    - port: 80
      targetPort: 5000
---
# 8. Bank App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetaskeraws
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wetaskeraws
  template:
    metadata:
      labels:
        app: wetaskeraws
    spec:
      containers:
        - name: wetaskeraws
          image: 939669539202.dkr.ecr.us-east-1.amazonaws.com/wetasker:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
