kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wetaskeraws-ingress
  namespace: webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - testcloud.wetasker.com
    secretName: wetaskeraws-tls-secret
  rules:
  - host: testcloud.wetasker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wetaskeraws-service
            port:
              number: 80
